完成了网络探测和仿真模拟功能